Fixed spacing and alignment issues with Landing page to match closer to the wire frame

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -4,21 +4,38 @@
 
 .landing-page-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
     border: 2px solid pink;
-    max-width: 270px;
-    height: 357px;
+    margin: 1.6em auto;
+    max-width: 70em;
 }
 
-.spot-card-img {
-    width: 270px;
-    border-radius: 14px;
-}
-
-.spot-details {
+.card-container {
     display: flex;
-    padding: 3px;
+    flex-direction: column;
+    align-items: center;
+    border: 2px dashed blue;
+    width: 14.3em;
+    height: 15.3em;
+    margin: .7em .5em;
+}
+.card-img {
+    width: 100%;
+    border: 1px dotted brown;
+    margin-bottom: 4px;
+}
+
+.card-details {
+    display: flex;
     justify-content: space-between;
     border: 1px solid fuchsia;
+    width: 96%;
+    margin-bottom: .3em;
+}
 
+.card-price {
+    border: 1px solid lime;
+    width: 96%;
 }
